fix destacados z-index

--- a/app/scss/_destacados.scss
+++ b/app/scss/_destacados.scss
@@ -1,7 +1,8 @@
 section#destacados {
     //position: relative;
     //display: inline-flex;
-    margin-bottom: -60px; //z-index: 1; //text-align: center;
+    margin-bottom: -60px;
+    z-index: 2; //text-align: center;
     .item-outer:first-child>a {
         border-top: 5.44px solid #f37121;
     }
